<resources>
    <string name="app_name">EXAMEN_PMDM_ISAAC_MARTIN</string>
    <string name="lbl_titulo_encuesta">ENCUESTA POPULAR</string>
    <string name="hint_nombre">Nombre persona encuestada</string>
    <string name="lbl_genero">Género:</string>
    <string name="rbt_hombre">Hombre</string>
    <string name="rbt_mujer">Mujer</string>
    <string name="rbt_otro">Otro</string>
    <string name="lbl_mayor_de_edad">Es mayor de edad:</string>
    <string name="lbl_pregunta">Pregunta:</string>
    <string name="lbl_respuestas">Respuestas:</string>
    <string name="chk_mostrar_informacion_log">Mostrar información por Log</string>
    <string name="btn_enviar_respuesta">Enviar Respuesta</string>
    <string-array name="spn_menor_edad">
        <item>¿Con qué frecuencia practicas deporte?</item>
        <item>¿Qué tipo de videojuegos te gustan más?</item>
    </string-array>
    <string-array name="spn_mayor_edad">
        <item>¿Cuál es tu salario anual?</item>
        <item>¿A qué partido político votarías?</item>
    </string-array>
    <string name="rbt_menor_edad_respuesta_1">Nunca</string>
    <string name="rbt_menor_edad_respuesta_2">En ocasiones</string>
    <string name="rbt_menor_edad_respuesta_3">Frecuentemente</string>
    <string name="rbt_menor_edad_respuesta_4">Shooter</string>
    <string name="rbt_menor_edad_respuesta_5">MOBA</string>
    <string name="rbt_menor_edad_respuesta_6">Plataformas</string>
    <string name="rbt_mayor_edad_respuesta_1">Menos de 15K</string>
    <string name="rbt_mayor_edad_respuesta_2">Entre 15K y 18K</string>
    <string name="rbt_mayor_edad_respuesta_3">Más de 18K</string>
    <string name="rbt_mayor_edad_respuesta_4">PSOE</string>
    <string name="rbt_mayor_edad_respuesta_5">PP</string>
    <string name="rbt_mayor_edad_respuesta_6">Otro</string>
</resources>